# slint_realtime_plotting_experiments

./: Cargo.toml  LICENSE  README.md  build.rs
src/: data_gen.rs  lib.rs  main.rs  renderer.rs  shader.wgsl
ui/: scene.slint
